--- a/Dogu Bolut/style.css
+++ b/Dogu Bolut/style.css
@@ -1,22 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 body{
+    font-family: "Montserrat", sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
+    background-color: #dbdbdb;
 }
 
 #container{
-    height: 400px;
+    height: 450px;
     width: 600px;
-    background-color: #d0d0d0;
+    background-color: floralwhite;
     border-radius: 10px;
 }
 
 #seesaw-container{
     position: relative;
-    height: 200px;
+    height: 250px;
     width: 400px;
-    background-color: #ddd;
+    background-color: ghostwhite;
     margin: 20px auto;
     border-radius: 10px;
 }
@@ -26,8 +30,18 @@ body{
     height: 20px;
     width: 400px;
     left: 0;
-    top: 90px;
-    background-color: brown;
+    top: 115px;
+    background-color: sienna;
+}
+
+#pivot {
+    position: absolute;
+    left: 190px;
+    top: 135px;
+    width: 20px;
+    height: 20px;
+    background-color: goldenrod;
+    border-radius: 50%;
 }
 
 .object {
@@ -37,7 +51,7 @@ body{
     align-items: center;
     justify-content: center;
     color: #fff;
-    font-size: 11px;
+    font-size: 12px;
     font-weight: bold;
 }
 
@@ -50,7 +64,7 @@ body{
     font-size: 18px;
     margin: 10px;
     padding: 5px;
-    background-color: #fff;
+    background-color: #ededed;
     color: #333;
     border-radius: 8px;
 }
@@ -60,10 +74,10 @@ body{
     font-size: 16px;
     font-weight: bolder;
     margin: 50px auto;
-    padding: 10px 30px;
+    padding: 10px 70px;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background-color: #ededed;
     color: #333;
     border: none;
     border-radius: 8px;
